@@ -24,30 +24,28 @@
 package gc;
 
 /*
- * @test TestAgeOutput
+ * @test TestAgeOutputSerial
  * @bug 8164936
- * @summary Check that collectors using age table based aging print an age table even for the first garbage collection
  * @key gc
- * @requires vm.gc=="null"
+ * @requires vm.gc.Serial
  * @modules java.base/jdk.internal.misc
  * @library /test/lib
  * @build sun.hotspot.WhiteBox
  * @run driver ClassFileInstaller sun.hotspot.WhiteBox
  * @run main/othervm -XX:+UseSerialGC gc.TestAgeOutput UseSerialGC
- * @run main/othervm -XX:+UseG1GC gc.TestAgeOutput UseG1GC
  */
 
 /*
- * @test TestAgeOutputCMS
+ * @test TestAgeOutputG1
  * @bug 8164936
+ * @summary Check that collectors using age table based aging print an age table even for the first garbage collection
  * @key gc
- * @comment Graal does not support CMS
- * @requires vm.gc=="null" & !vm.graal.enabled
+ * @requires vm.gc.G1
  * @modules java.base/jdk.internal.misc
  * @library /test/lib
  * @build sun.hotspot.WhiteBox
  * @run driver ClassFileInstaller sun.hotspot.WhiteBox
- * @run main/othervm -XX:+UseConcMarkSweepGC gc.TestAgeOutput UseConcMarkSweepGC
+ * @run main/othervm -XX:+UseG1GC gc.TestAgeOutput UseG1GC
  */
 
 import sun.hotspot.WhiteBox;
